--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,15 @@ jobs:
         os: [ubuntu-latest]
         scala: [2.12.17, 2.13.10, 3.2.1]
         java: [temurin@11, temurin@17]
-        project: [rootJS, rootJVM]
+        project: [rootJS, rootJVM, rootNative]
         exclude:
           - scala: 2.12.17
             java: temurin@17
           - scala: 3.2.1
             java: temurin@17
           - project: rootJS
+            java: temurin@17
+          - project: rootNative
             java: temurin@17
     runs-on: ${{ matrix.os }}
     steps:
@@ -100,6 +102,10 @@ jobs:
         if: matrix.project == 'rootJS'
         run: sbt 'project ${{ matrix.project }}' '++${{ matrix.scala }}' Test/scalaJSLinkerResult
 
+      - name: nativeLink
+        if: matrix.project == 'rootNative'
+        run: sbt 'project ${{ matrix.project }}' '++${{ matrix.scala }}' Test/nativeLink
+
       - name: Test
         run: sbt 'project ${{ matrix.project }}' '++${{ matrix.scala }}' test
 
@@ -117,11 +123,11 @@ jobs:
 
       - name: Make target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: mkdir -p target .js/target .jvm/target .native/target fs2/.js/target fs2/.jvm/target project/target
+        run: mkdir -p fs2/.native/target target .js/target .jvm/target .native/target fs2/.js/target fs2/.jvm/target project/target
 
       - name: Compress target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: tar cf targets.tar target .js/target .jvm/target .native/target fs2/.js/target fs2/.jvm/target project/target
+        run: tar cf targets.tar fs2/.native/target target .js/target .jvm/target .native/target fs2/.js/target fs2/.jvm/target project/target
 
       - name: Upload target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
@@ -210,6 +216,16 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
+      - name: Download target directories (2.12.17, rootNative)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12.17-rootNative
+
+      - name: Inflate target directories (2.12.17, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (2.13.10, rootJS)
         uses: actions/download-artifact@v2
         with:
@@ -230,6 +246,16 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
+      - name: Download target directories (2.13.10, rootNative)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13.10-rootNative
+
+      - name: Inflate target directories (2.13.10, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (3.2.1, rootJS)
         uses: actions/download-artifact@v2
         with:
@@ -246,6 +272,16 @@ jobs:
           name: target-${{ matrix.os }}-${{ matrix.java }}-3.2.1-rootJVM
 
       - name: Inflate target directories (3.2.1, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (3.2.1, rootNative)
+        uses: actions/download-artifact@v2
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3.2.1-rootNative
+
+      - name: Inflate target directories (3.2.1, rootNative)
         run: |
           tar xf targets.tar
           rm targets.tar
